kubernetes/utility/apps/git-system/opengist/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opengist
  annotations:
    external-dns/unifi: "true"
spec:
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  hostnames:
    - gist.techtales.io
  rules:
    - backendRefs:
        - name: opengist
          port: 6157
